# HackAUBG

./: README.md  package-lock.json  requirements.txt
.github/workflows/: azure-static-web-apps-witty-flower-0584d3903.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  master_tinyheart.yml
client/: .firebaserc  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
client/.firebase/: hosting.ZGlzdA.cache
client/src/: App.tsx  main.tsx  theme.ts
client/src/Global/Constants/: uiConstants.ts
client/src/Global/Hooks/: useContainerDimensions.ts  useGetCurrentMuiBreakpoint.ts
client/src/Layout/: AuthLayout.tsx  GuestLayout.tsx
client/src/authPages/: ForgottenPassword.tsx  Login.tsx  Register.tsx  login.css
client/src/context/: ThemeContext.tsx
client/src/utils/: routes.ts  useFirebase.jsx  useFirebase.tsx  utils.ts
py/pythonProject/: app.py  modelche.py  test.py
python-server/: Dockerfile  pyproject.toml
python-server/ml-model/: modelche.py  test.py
python-server/python_server/: config.py  main.py
python-server/python_server/mlmodel/: Algorithm_Accuracy.py  Analyze.py  Boxplot.py  Boxplot_Xdata.py  Data_Info.py  Heatmap.py  Number_Of_Entries.py  Predict.py  RF_model.joblib  Significant_Columns.py  Training_Model_Initial.py  model.py  storage.joblib  test2.py  tetstyadfg.py
python-server/python_server/routes/: get_ml_data.py  routes.py
pythonProject/: app.py  modelche.py  test.py  test2.py
server/be/: urls.py  views.py
server/data_api/: models.py
server/server/: settings.py  urls.py
(+16 files in other folders)
